# kognic-auth-python

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: export-licenses.yml  python-package.yml  python-publish.yml
annotell-auth/: README.md
annotell-auth/annotell/auth/: __init__.py  authsession.py  httpx_auth.py
annotell-auth/annotell/auth/httpx/: async_client.py
kognic/auth/httpx/: async_client.py
kognic/auth/requests/: auth_session.py
src/kognic/auth/: __init__.py  _protocols.py  _serde.py  _sunset.py  _user_agent.py  _version.py  cli.py  config.py  credentials.py  credentials_parser.py  env_config.py  serde.py
src/kognic/auth/base/: auth_client.py
src/kognic/auth/cli/: __init__.py  _output.py  api_request.py  call.py  credentials.py  get_access_token.py  token_cache.py
src/kognic/auth/httpx/: __init__.py  async_client.py  base_client.py
src/kognic/auth/internal/: credential_store.py  credentials_store.py  token_cache.py
src/kognic/auth/internal/token_cache/: __init__.py  _base.py  _file.py  _keyring.py
src/kognic/auth/requests/: __init__.py  auth_session.py  base_client.py  bearer_auth.py
tests/: base_auth_client_tests.py  credentials_parser_tests.py  test_base_client_async.py  test_base_client_sync.py  test_cli.py  test_config.py  test_credential_store.py  test_credentials_parser.py  test_credentials_store.py  test_deserialization.py  test_requests_auth.py  test_serde.py  test_serde_pydantic.py  test_serialization.py  test_sunset.py  test_token_cache.py  test_type_helpers.py  test_user_agent.py
